--- a/gradle.properties
+++ b/gradle.properties
@@ -75,7 +75,7 @@ includeWellKnownRepositories = true
 # Adds JEI and TheOneProbe to your development environment. Adds them as 'implementation', meaning they will
 # be available at compiletime and runtime for your mod (in-game and in-code).
 # Overrides the above setting to be always true, as these repositories are needed to fetch the mods
-includeCommonDevEnvMods = true
+includeCommonDevEnvMods = false
 
 
 # If enabled, you may use 'shadowCompile' for dependencies. They will be integrated in your jar. It is your
@@ -89,7 +89,7 @@ relocateShadowedDependencies = true
 
 # Separate run directories into "run/client" for runClient task, and "run/server" for runServer task.
 # Useful for debugging a server and client simultaneously. If not enabled, it will be in the standard location "run/"
-separateRunDirectories = false
+separateRunDirectories = true
 
 
 # Publishing to modrinth requires you to set the MODRINTH_API_KEY environment variable to your current modrinth API token.
