--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-modName = Real Bench Patched
+modName = RealBench: Nomifactory CEu Edition
 
 # This is a case-sensitive string to identify your mod. Convention is to use lower case.
 modId = realbench
@@ -13,7 +13,7 @@ modVersion = 1.0.0
 includeMCVersionJar = false
 
 # The name of your jar when you produce builds, not including any versioning info
-modArchivesBaseName = realbench-patched
+modArchivesBaseName = RealBench-Nomi-CEu
 
 # Will update your build.gradle automatically whenever an update is available
 autoUpdateBuildScript = false
