--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-modName = RealBench: Nomifactory CEu Edition
+modName = RealBench: Nomi CEu Edition
 
 # This is a case-sensitive string to identify your mod. Convention is to use lower case.
 modId = realbench
