--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ modGroup = com.nomiceu.realbench
 
 # Version of your mod.
 # This field can be left empty if you want your mod's version to be determined by the latest git tag instead.
-modVersion = 1.0.0
+modVersion = 1.0.1
 
 # Whether to use the old jar naming structure (modid-mcversion-version) instead of the new version (modid-version)
 includeMCVersionJar = false
@@ -129,7 +129,7 @@ releaseType = release
 
 # Generate a default changelog for releases. Requires git to be installed, as it uses it to generate a changelog of
 # commits since the last tagged release.
-generateDefaultChangelog = false
+generateDefaultChangelog = true
 
 # Prevent the source code from being published
 noPublishedSources = false
