--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -22,5 +22,6 @@
  * For more details, see https://docs.gradle.org/8.0.1/userguide/java_library_plugin.html#sec:java_library_configurations_graph
  */
 dependencies {
-    compileOnlyApi rfg.deobf("curse.maven:fastworkbench-288885:4030366")
+    implementation rfg.deobf("curse.maven:fastworkbench-288885:4030366")
+    implementation rfg.deobf("curse.maven:avaritia-261348:3143349")
 }
