--- a/gradle.properties
+++ b/gradle.properties
@@ -120,7 +120,7 @@ curseForgeProjectId = 945503
 # Where type can be one of [requiredDependency, embeddedLibrary, optionalDependency, tool, incompatible],
 #       and the name is the CurseForge project slug of the other mod.
 # Example: requiredDependency:railcraft;embeddedLibrary:cofhlib;incompatible:buildcraft
-curseForgeRelations = incompatible:realbench;optionalDependency:fastworkbench;optionalDependency:universal-tweaks
+curseForgeRelations = requiredDependency:mixin-booter;incompatible:realbench;optionalDependency:fastworkbench;optionalDependency:universal-tweaks
 
 # This project's release type on CurseForge and/or Modrinth
 # Alternatively this can be set with the 'RELEASE_TYPE' environment variable.
